remove opens previously added